<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".dancemusic">

    <TextView
        android:id="@+id/oa_tv"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/a32"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="100dp"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:src="@drawable/wave2" />-->

    <ImageView
        android:id="@+id/dandm1"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:src="@drawable/dancemusic1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dandm1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:text="@string/a39"
        android:textColor="@color/black"
        android:textSize="19dp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spin2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="470dp"
        android:background="@color/white"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spin2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/a36" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spin2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="25dp"
        android:text="@string/a40"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/a38" />



</RelativeLayout>